--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-crud",
-  "version": "0.0.0",
+  "version": "1.0.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -44,5 +46,19 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.7.4.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/markusnt/AngularTestRequest.git"
+  },
+  "keywords": [
+    "pass1234"
+  ],
+  "author": "Markus Nathan Marques",
+  "bugs": {
+    "url": "https://github.com/markusnt/AngularTestRequest/issues"
+  },
+  "homepage": "https://github.com/markusnt/AngularTestRequest#readme"
 }
